--- a/src/index.html
+++ b/src/index.html
@@ -2,31 +2,30 @@
 <html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <meta property="og:title" content="Madness Enjineer - An app boilerplate" />
-    <meta
-      property="og:image"
-      content="https://madnessenjineer.web.app/assets/icon/icon.png"
-    />
-    <meta property="og:site_name" content="Madness Enjineer" />
-    <meta property="og:description" content="An app boilerplate" />
-
-    <title>Madness Enjineer</title>
+    <title>Enjin Editor</title>
 
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="HandheldFriendly" content="true" />
-    <meta name="description" content="An app boilerplate" />
-    <meta name="theme-color" content="#ffc409" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="FireEnjin" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#ffc409" />
-    <meta http-equiv="x-ua-compatible" content="IE=Edge" />
+    <meta name="description" content="A local design system testing tool" />
+    <meta name="theme-color" content="#16161d" />
 
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Flood Team Components" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <meta http-equiv="x-ua-compatible" content="IE=Edge" />
+    <script
+      type="module"
+      src="https://unpkg.com/@madnesslabs/fireenjin-designer@latest/dist/fireenjin-designer/fireenjin-designer.esm.js"
+    ></script>
     <script type="module" src="/build/enjin.esm.js"></script>
     <script nomodule src="/build/enjin.js"></script>
+
     <link href="/build/enjin.css" rel="stylesheet" />
     <link
       rel="apple-touch-icon"
@@ -34,62 +33,18 @@
       href="/assets/icon/apple-touch-icon.png"
     />
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Raleway&display=swap"
-      rel="stylesheet"
-    />
     <link rel="manifest" href="/manifest.json" />
     <style>
       body {
-        background-color: #ffffff;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      noscript {
-        padding: 15px 15px 15px 40px;
         display: block;
-        width: 80%;
-        max-width: 600px;
-        margin: 30px auto;
-        background-color: #ffffff;
-        border-radius: 4px;
-        color: #666666;
-        position: relative;
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-          0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-      }
-
-      noscript span {
-        font-weight: bold;
-        display: block;
-        height: 20px;
-        width: 20px;
-        border-radius: 100%;
-        background-color: #ffffff;
-        color: #666666;
-        line-height: 20px;
-        text-align: center;
-        position: absolute;
-        top: 13px;
-        left: 12px;
-      }
-
-      app-root {
-        opacity: 0 !important;
-        transition: opacity 0.3s ease;
-      }
-
-      app-root.is-loaded {
-        opacity: 1 !important;
+        overflow: auto;
+        position: initial;
       }
     </style>
   </head>
 
   <body>
-    <noscript>
-      <span>i</span> You must have JS enabled to use the FireEnjin app.
-    </noscript>
-    <enjin-editor placeholder="Testing"></enjin-editor>
+    <fireenjin-designer-gallery></fireenjin-designer-gallery>
+    <script src="/presets.js"></script>
   </body>
 </html>
