fix(Code): Correct bug with pasting content into ace widget also pasting text into block below

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
         overflow: auto;
         position: initial;
       }
+      .organism-wrapper {
+        background: var(--ion-color-base);
+      }
     </style>
   </head>
 
