fix(): Wire up new input block

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
       .organism-wrapper {
         background: var(--ion-color-base);
       }
+      .organism-canvas {
+        padding: 20px 80px !important;
+      }
     </style>
   </head>
 
